--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,12 @@
   text-align: left;
   width: 100%;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 /* Global app styles */
 .App {
   width: 100%;
   min-height: 100vh;
+  overflow: hidden;
 }
